tests/compiler_errors/fn_tests/multiple_pre_delclaration.tlp
fn foo int -> int end
fn foo int -> int end 